Add ACM DNS validation to prxu.org

--- a/dns/prxu.org-hosted_zone.yml
+++ b/dns/prxu.org-hosted_zone.yml
@@ -191,3 +191,19 @@ Resources:
           TTL: "86400"
           Type: CNAME
           Name: !Sub cdn.dovetail.${Domain}
+  Aws:
+    Type: "AWS::Route53::RecordSetGroup"
+    Properties:
+      Comment: AWS ACM, etc
+      HostedZoneId: !Ref HostedZone
+      RecordSets:
+        - ResourceRecords:
+            - _a1223e715b9fc43c557b8daf3fa0df78.ltfvzjuylp.acm-validations.aws.
+          TTL: "300"
+          Type: CNAME
+          Name: !Sub _27bbc5f87c001a6920754062a0e9b5cf.${Domain}
+        - ResourceRecords:
+            - _f861f90a68649e60ad5f2de282b8aaa7.ltfvzjuylp.acm-validations.aws.
+          TTL: "300"
+          Type: CNAME
+          Name: !Sub _f79a9b60b3cc01c7bb92efc883e97072.staging.${Domain}
