Use DNS validation for CI API certificate

--- a/ci/ci.yml
+++ b/ci/ci.yml
@@ -240,6 +240,7 @@ Resources:
           Value: !Ref AWS::StackName
         - Key: "prx:cloudformation:stack-id"
           Value: !Ref AWS::StackId
+      ValidationMethod: DNS
   ## API Gateway
   # ## /
   RestApi:
