Use DNS validation for feed-cdn certificate

--- a/cdn/feed-cdn.yml
+++ b/cdn/feed-cdn.yml
@@ -163,6 +163,7 @@ Resources:
           Value: !Ref AWS::StackName
         - Key: "prx:cloudformation:stack-id"
           Value: !Ref AWS::StackId
+      ValidationMethod: DNS
   # CloudFront
   CloudFrontDistribution:
     Type: "AWS::CloudFront::Distribution"
