Use DNS validation for single-origin certificate

--- a/cdn/single-origin.yml
+++ b/cdn/single-origin.yml
@@ -276,6 +276,7 @@ Resources:
           Value: !Ref AWS::StackName
         - Key: "prx:cloudformation:stack-id"
           Value: !Ref AWS::StackId
+      ValidationMethod: DNS
   CloudFrontDistribution:
     Type: "AWS::CloudFront::Distribution"
     Properties:
