--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -90,6 +90,8 @@ Parameters:
     Type: String
   FourohfourEcrImageTag:
     Type: String
+  RadiotopiaTowerLambdaCodeS3ObjectVersion:
+    Type: String
   UploadLambdaCodeS3ObjectVersion:
     Type: String
   AnalyticsIngestLambdaCodeS3ObjectVersion:
