Add deployable tower.radiotopia.fm Lambda

--- a/stacks/serverless/root.yml
+++ b/stacks/serverless/root.yml
@@ -39,6 +39,8 @@ Parameters:
     Type: String
   AnalyticsIngestLambdaCodeS3ObjectVersion:
     Type: String
+  RadiotopiaTowerLambdaCodeS3ObjectVersion:
+    Type: String
 Resources:
   UploadLambdaStack:
     Type: "AWS::CloudFormation::Stack"
@@ -76,7 +78,14 @@ Resources:
         OpsErrorMessagesSnsTopicArn:
           Fn::ImportValue:
             !Sub "${InfrastructureNotificationsStackName}-OpsErrorMessagesSnsTopicArn"
+        OpsWarnMessagesSnsTopicArn:
+          Fn::ImportValue:
+            !Sub "${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn"
         EnvironmentType: !Ref EnvironmentType
+        CodeS3Bucket:
+          Fn::ImportValue:
+            !Sub "${InfrastructureStorageStackName}-InfrastructureApplicationCodeBucket"
+        CodeS3ObjectVersion: !Ref RadiotopiaTowerLambdaCodeS3ObjectVersion
       Tags:
         - Key: "prx:cloudformation:stack-name"
           Value: !Ref AWS::StackName
