Fix Lambda permission

--- a/stacks/serverless/tower.radiotopia.fm.yml
+++ b/stacks/serverless/tower.radiotopia.fm.yml
@@ -107,7 +107,7 @@ Resources:
     Type: "AWS::Lambda::Permission"
     Properties:
       Action: "lambda:InvokeFunction"
-      FunctionName: !GetAtt TowerLambdaIamRole.Arn
+      FunctionName: !GetAtt TowerLambdaFunction.Arn
       Principal: apigateway.amazonaws.com
       SourceArn: !Sub "arn:aws:execute-api:${AWS::Region}:${AWS::AccountId}:${RestApi}/${Stage}/*"
   # API Gateway
@@ -193,3 +193,18 @@ Resources:
           LoggingLevel: "INFO"
           MetricsEnabled: true
           ResourcePath: "/*"
+  # Domain
+  Certificate:
+    Type: AWS::CertificateManager::Certificate
+    Properties:
+      DomainName: "tower.radiotopia.fm"
+      Tags:
+        - Key: Project
+          Value: tower.radiotopia.fm
+        - Key: Name
+          Value: !Ref AWS::StackName
+        - Key: "prx:cloudformation:stack-name"
+          Value: !Ref AWS::StackName
+        - Key: "prx:cloudformation:stack-id"
+          Value: !Ref AWS::StackId
+      ValidationMethod: DNS
