Only create certificate in production

--- a/stacks/serverless/tower.radiotopia.fm.yml
+++ b/stacks/serverless/tower.radiotopia.fm.yml
@@ -196,6 +196,7 @@ Resources:
   # Domain
   Certificate:
     Type: AWS::CertificateManager::Certificate
+    Condition: CreateProductionResources
     Properties:
       DomainName: tower.radiotopia.fm
       Tags:
