--- a/dns/radiotopia.fm-hosted_zone.yml
+++ b/dns/radiotopia.fm-hosted_zone.yml
@@ -169,7 +169,7 @@ Resources:
         - Type: A
           Name: !Sub tower.${Domain}
           AliasTarget:
-            DNSName: doerrhbe4q1bo.cloudfront.net
+            DNSName: d28j1u25oq2mj3.cloudfront.net
             # Global CloudFront hosted zone ID
             HostedZoneId: Z2FDTNDATAQYW2
         - Type: AAAA
