Add prx.org and prxu.org certificate validation records

--- a/dns/prx.org-hosted_zone.yml
+++ b/dns/prx.org-hosted_zone.yml
@@ -1628,3 +1628,53 @@ Resources:
           TTL: "300"
           Type: CNAME
           Name: !Sub _81a7e2b5cf0c4f79d7188da0f03ae72d.${Domain}
+        - ResourceRecords:
+            - _8f30879a8a9a0d132885fba98b38f78a.ltfvzjuylp.acm-validations.aws.
+          TTL: "300"
+          Type: CNAME
+          Name: !Sub _265f020ebc4af9d79a6e4079a4fc72b6.backsaw.${Domain}
+        - ResourceRecords:
+            - _b723750b6c4dd2b56d92bec85cbf575e.acm-validations.aws.
+          TTL: "300"
+          Type: CNAME
+          Name: !Sub _ed818192c01d69685019f0df4a93b99d.cdn.allusionist.${Domain}
+        - ResourceRecords:
+            - _bcd204f81f26c5e2d4644e2a799e8965.ltfvzjuylp.acm-validations.aws.
+          TTL: "300"
+          Type: CNAME
+          Name: !Sub _d5d3126a9ebf5763eeabec3b0c91cf7f.cdn-allusionist.${Domain}
+        - ResourceRecords:
+            - _ec7e44da2ad2e5f0def8682144d83c6d.ltfvzjuylp.acm-validations.aws.
+          TTL: "300"
+          Type: CNAME
+          Name: !Sub _49790bcba62376a77d03ff169fde946a.cdn.reveal.${Domain}
+        - ResourceRecords:
+            - _6422d90655dea26fb64242eec0459ede.ltfvzjuylp.acm-validations.aws.
+          TTL: "300"
+          Type: CNAME
+          Name: !Sub _ad9004a66622eb27bec8d010561361ea.cdn-reveal.${Domain}
+        - ResourceRecords:
+            - _4ce52ca1a07e39ab0c68b5d2ac294210.ltfvzjuylp.acm-validations.aws.
+          TTL: "300"
+          Type: CNAME
+          Name: !Sub _a544dad876ab54f2e7cd244158b65ea7.media.${Domain}
+        - ResourceRecords:
+            - _dd2283fe6b42a7526f7b9739e0638906.ltfvzjuylp.acm-validations.aws.
+          TTL: "300"
+          Type: CNAME
+          Name: !Sub _32d33e14d4cd8184f3bc20cb3a7196f8.assets.${Domain}
+        - ResourceRecords:
+            - _60dffc2d9ad10247fa937a2c9363a8dc.ltfvzjuylp.acm-validations.aws.
+          TTL: "300"
+          Type: CNAME
+          Name: !Sub _4e92e0c7ba90a9161b249e971d78bb34.assets1.${Domain}
+        - ResourceRecords:
+            - _dd8fc717a9e1812a20ca609d2673b50e.ltfvzjuylp.acm-validations.aws.
+          TTL: "300"
+          Type: CNAME
+          Name: !Sub _9664e08413d050d9ce94ac5e7ba8d11c.assets2.${Domain}
+        - ResourceRecords:
+            - _e829af98d504966c824f814e5235d3f8.ltfvzjuylp.acm-validations.aws.
+          TTL: "300"
+          Type: CNAME
+          Name: !Sub _13508a876b64465c58be4bfe738438d3.beta.${Domain}
