--- a/dns/prxu.org-hosted_zone.yml
+++ b/dns/prxu.org-hosted_zone.yml
@@ -207,3 +207,28 @@ Resources:
           TTL: "300"
           Type: CNAME
           Name: !Sub _f79a9b60b3cc01c7bb92efc883e97072.staging.${Domain}
+        - ResourceRecords:
+            - _e2229961e29245b3fcd1ebae37d197a6.ltfvzjuylp.acm-validations.aws.
+          TTL: "300"
+          Type: CNAME
+          Name: !Sub _74e5807bd6880b68587c2229f31da388.f.${Domain}
+        - ResourceRecords:
+            - _9cc6c2291c9a14e3f47e150649921b1e.ltfvzjuylp.acm-validations.aws.
+          TTL: "300"
+          Type: CNAME
+          Name: !Sub _2f3c5aecd315d2d282ca7d7502a997b4.f-staging.${Domain}
+        - ResourceRecords:
+            - _eb91f077232ecd07ccc5577e38f044dc.ltfvzjuylp.acm-validations.aws.
+          TTL: "300"
+          Type: CNAME
+          Name: !Sub _14890aeee5f89db0303658b97db3e223.dovetail-cdn.${Domain}
+        - ResourceRecords:
+            - _b91071c10a4b4ac682e4556bbca3f2f1.ltfvzjuylp.acm-validations.aws.
+          TTL: "300"
+          Type: CNAME
+          Name: !Sub _c0a78e4dc0641158468774cfeec66f6e.dovetail-cdn-staging.${Domain}
+        - ResourceRecords:
+            - _db9d45e09be31a9a888e1a793969a911.ltfvzjuylp.acm-validations.aws.
+          TTL: "300"
+          Type: CNAME
+          Name: !Sub _ac77f64307346fc4ab79289150f00aba.userupload.${Domain}
