--- a/cdn/dovetail-cdn.yml
+++ b/cdn/dovetail-cdn.yml
@@ -16,7 +16,6 @@ Metadata:
           - OriginBucket
           - OriginPath
           - DistributionDomain
-          - CertificateArn
           - LambdaFunctionArn
           - LambdaBytesFunctionArn
     ParameterLabels:
@@ -26,8 +25,6 @@ Metadata:
         default: Origin S3 Path
       DistributionDomain:
         default: Domain Name
-      CertificateArn:
-        default: ACM Certificate Arn
       LambdaFunctionArn:
         default: Stitch Function Arn
       LambdaBytesFunctionArn:
@@ -44,9 +41,6 @@ Parameters:
   DistributionDomain:
     Type: String
     Description: eg. dovetail-cdn.prxu.org
-  CertificateArn:
-    Type: String
-    Description: eg. arn:aws:acm:<region>:<account>:certificate/<guid>
   LambdaFunctionArn:
     Type: String
     Description: eg. arn:aws:lambda:<region>:<account>:function:<name>:<version>
@@ -58,6 +52,20 @@ Parameters:
     Description: The name of a previously launched notifications stack
     Type: String
 Resources:
+  Certificate:
+    Type: "AWS::CertificateManager::Certificate"
+    Properties:
+      DomainName: !Ref DistributionDomain
+      Tags:
+        - Key: Project
+          Value: Dovetail
+        - Key: Name
+          Value: !Sub "${AWS::StackName} ${AWS::Region}"
+        - Key: "prx:cloudformation:stack-name"
+          Value: !Ref AWS::StackName
+        - Key: "prx:cloudformation:stack-id"
+          Value: !Ref AWS::StackId
+      ValidationMethod: DNS
   CloudFrontDistribution:
     Type: "AWS::CloudFront::Distribution"
     Properties:
@@ -109,7 +117,7 @@ Resources:
             S3OriginConfig: {}
         PriceClass: PriceClass_200
         ViewerCertificate:
-          AcmCertificateArn: !Ref CertificateArn
+          AcmCertificateArn: !Ref Certificate
           SslSupportMethod: sni-only
       Tags:
         - Key: Project
