--- a/stacks/load-balancers.yml
+++ b/stacks/load-balancers.yml
@@ -81,8 +81,13 @@ Resources:
     Properties:
       # IpAddressType: dualstack
       LoadBalancerAttributes:
+        # https://docs.aws.amazon.com/elasticloadbalancing/latest/application/application-load-balancers.html#load-balancer-attributes
         - Key: idle_timeout.timeout_seconds
           Value: "150"
+        - Key: access_logs.s3.enabled
+          Value: "true"
+        - Key: access_logs.s3.bucket
+          Value: !Ref PlatformALBLogsBucket
       Scheme: internet-facing
       SecurityGroups:
         - !Ref PlatformSecurityGroup
@@ -121,6 +126,39 @@ Resources:
       DefaultActions:
         - Type: forward
           TargetGroupArn: !Ref PlatformALBDefaultTargetGroup
+  # Logging
+  PlatformALBLogsBucket:
+    Type: "AWS::S3::Bucket"
+    DeletionPolicy: Retain
+    Properties:
+      LifecycleConfiguration:
+        Rules:
+          - ExpirationInDays: 3
+            Status: Enabled
+      Tags:
+        - Key: Project
+          Value: Infrastructure
+        - Key: "prx:cloudformation:stack-name"
+          Value: !Ref AWS::StackName
+        - Key: "prx:cloudformation:stack-id"
+          Value: !Ref AWS::StackId
+      VersioningConfiguration:
+        Status: Suspended
+  PlatformALBLogsBucketPolicy:
+    # https://docs.aws.amazon.com/elasticloadbalancing/latest/application/load-balancer-access-logs.html#access-logging-bucket-permissions
+    Type: "AWS::S3::BucketPolicy"
+    Properties:
+      Bucket: !Ref PlatformALBLogsBucket
+      PolicyDocument:
+        Statement:
+          - Action:
+              - "s3:PutObject"
+            Effect: "Allow"
+            Resource:
+              - !Sub ${PlatformALBLogsBucket}/*
+            Principal:
+              AWS:
+                - "127311923021" # The us-east-1 account ID of ELB
   # CloudWatch Alarms
   PlatformALB5XXAlarm:
     Type: "AWS::CloudWatch::Alarm"
