Allow additional S3 operations with the CloudFormation CD role

--- a/cd/cd.yml
+++ b/cd/cd.yml
@@ -1102,12 +1102,14 @@ Resources:
           PolicyDocument:
             Version: "2012-10-17"
             Statement:
-              # Be very explicit with S3 policies; CloudFormation never deletes
-              # S3 buckets anyway
+              # Never let CloudFormation delete anything from S3
+              - Effect: Deny
+                Action:
+                  - "s3:Delete*"
+                Resource: "*"
               - Effect: Allow
                 Action:
-                  - s3:CreateBucket
-                  - s3:PutLifecycleConfiguration
+                  - "s3:*"
                 Resource: "*"
               # Only include services that root stack or its nested stacks
               # actually use
