Avoid race condition with LB logging policy

--- a/stacks/load-balancers.yml
+++ b/stacks/load-balancers.yml
@@ -78,6 +78,8 @@ Resources:
       VpcId: !Ref VPC
   PlatformALB:
     Type: "AWS::ElasticLoadBalancingV2::LoadBalancer"
+    DependsOn:
+      - PlatformALBLogsBucketPolicy
     Properties:
       # IpAddressType: dualstack
       LoadBalancerAttributes:
