Improve LB logging bucket policy

--- a/stacks/load-balancers.yml
+++ b/stacks/load-balancers.yml
@@ -152,15 +152,17 @@ Resources:
     Properties:
       Bucket: !Ref PlatformALBLogsBucket
       PolicyDocument:
+        Version: "2012-10-17"
         Statement:
-          - Action:
+          - Sid: ELBLogWriteAccess
+            Action:
               - "s3:PutObject"
-            Effect: "Allow"
-            Resource:
-              - !Sub ${PlatformALBLogsBucket}/*
+            Effect: Allow
             Principal:
               AWS:
                 - "127311923021" # The us-east-1 account ID of ELB
+            Resource:
+              - !Sub ${PlatformALBLogsBucket}/*
   # CloudWatch Alarms
   PlatformALB5XXAlarm:
     Type: "AWS::CloudWatch::Alarm"
