Use bucket Arn for policy resource

--- a/stacks/load-balancers.yml
+++ b/stacks/load-balancers.yml
@@ -162,7 +162,7 @@ Resources:
               AWS:
                 - "127311923021" # The us-east-1 account ID of ELB
             Resource:
-              - !Sub ${PlatformALBLogsBucket}/*
+              - !Sub ${PlatformALBLogsBucket.Arn}/*
   # CloudWatch Alarms
   PlatformALB5XXAlarm:
     Type: "AWS::CloudWatch::Alarm"
