--- a/stacks/serverless/pixel.prx.org.yml
+++ b/stacks/serverless/pixel.prx.org.yml
@@ -2,7 +2,6 @@
 AWSTemplateFormatVersion: "2010-09-09"
 Description: API Gateway pixel tracker
 Conditions:
-  CreateStagingResources: !Equals [!Ref EnvironmentType, Staging]
   CreateProductionResources: !Equals [!Ref EnvironmentType, Production]
 Parameters:
   OpsWarnMessagesSnsTopicArn:
@@ -14,8 +13,6 @@ Parameters:
   CodeS3ObjectVersion:
     Type: String
   EnvironmentType:
-    Type: String
-  EnvironmentTypeAbbreviation:
     Type: String
 Mappings:
   EnvironmentTypeMap:
@@ -159,18 +156,18 @@ Resources:
   PixelRestApiDomainNameRecordSetGroup:
     Type: "AWS::Route53::RecordSetGroup"
     Properties:
-      Comment: Record sets for proxy server API
+      Comment: Record sets for pixel tracker server API
       HostedZoneName: !FindInMap [EnvironmentTypeMap, !Ref EnvironmentType, HostedZoneName]
       RecordSets:
         - Type: AAAA
           Name: !FindInMap [EnvironmentTypeMap, !Ref EnvironmentType, DomainName]
           AliasTarget:
-            DNSName: !GetAtt ProxyRestApiDomainName.DistributionDomainName
+            DNSName: !GetAtt PixelRestApiDomainName.DistributionDomainName
             HostedZoneId: Z2FDTNDATAQYW2
         - Type: A
           Name: !FindInMap [EnvironmentTypeMap, !Ref EnvironmentType, DomainName]
           AliasTarget:
-            DNSName: !GetAtt ProxyRestApiDomainName.DistributionDomainName
+            DNSName: !GetAtt PixelRestApiDomainName.DistributionDomainName
             HostedZoneId: Z2FDTNDATAQYW2
   ProductionRedirectRestApiDomainName:
     Type: "AWS::ApiGateway::DomainName"
@@ -183,7 +180,7 @@ Resources:
     Condition: CreateProductionResources
     Properties:
       DomainName: !Ref ProductionRedirectRestApiDomainName
-      RestApiId: !Ref ProxyRestApi
+      RestApiId: !Ref PixelRestApi
       Stage: prod
   ProductionRestApiDomainName:
     Type: "AWS::ApiGateway::DomainName"
@@ -196,13 +193,13 @@ Resources:
     Condition: CreateProductionResources
     Properties:
       DomainName: !Ref ProductionRestApiDomainName
-      RestApiId: !Ref ProxyRestApi
+      RestApiId: !Ref PixelRestApi
       Stage: prod
   ApiGateway5XXAlarm:
     Type: "AWS::CloudWatch::Alarm"
     Properties:
       ActionsEnabled: true
-      AlarmName: !Sub "[proxy.prx.org][${EnvironmentType}] 5XXErrors"
+      AlarmName: !Sub "[pixel.prx.org][${EnvironmentType}] 5XXErrors"
       AlarmActions:
         - !If [CreateProductionResources, !Ref OpsErrorMessagesSnsTopicArn, !Ref OpsWarnMessagesSnsTopicArn]
       InsufficientDataActions:
@@ -210,7 +207,7 @@ Resources:
       OKActions:
         - !If [CreateProductionResources, !Ref OpsErrorMessagesSnsTopicArn, !Ref OpsWarnMessagesSnsTopicArn]
       AlarmDescription: >
-        Too many 500 errors from the corporate site proxy
+        Too many 500 errors from the pixel tracker
       ComparisonOperator: GreaterThanThreshold
       Dimensions:
         - Name: ApiName
@@ -225,7 +222,7 @@ Resources:
 Outputs:
   ApiDomainName:
     Description: The custom API domain name
-    Value: !Ref ProxyRestApiDomainName
+    Value: !Ref PixelRestApiDomainName
   DistributionDomainName:
     Description: The Amazon CloudFront distribution domain name that's mapped to the custom domain name
-    Value: !GetAtt ProxyRestApiDomainName.DistributionDomainName
+    Value: !GetAtt PixelRestApiDomainName.DistributionDomainName
