--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -92,6 +92,8 @@ Parameters:
     Type: String
   RadiotopiaTowerLambdaCodeS3ObjectVersion:
     Type: String
+  PixelPrxOrgCodeS3ObjectVersion:
+    Type: String
   UploadLambdaCodeS3ObjectVersion:
     Type: String
   AnalyticsIngestLambdaCodeS3ObjectVersion:
@@ -236,6 +238,7 @@ Resources:
         CmsImageLambdaCodeS3ObjectVersion: !Ref CmsImageLambdaCodeS3ObjectVersion
         AnalyticsIngestLambdaCodeS3ObjectVersion: !Ref AnalyticsIngestLambdaCodeS3ObjectVersion
         RadiotopiaTowerLambdaCodeS3ObjectVersion: !Ref RadiotopiaTowerLambdaCodeS3ObjectVersion
+        PixelPrxOrgCodeS3ObjectVersion: !Ref PixelPrxOrgCodeS3ObjectVersion
       Tags:
         - Key: "prx:cloudformation:stack-name"
           Value: !Ref AWS::StackName
