Use DNS validation

--- a/stacks/serverless/pixel.prx.org.yml
+++ b/stacks/serverless/pixel.prx.org.yml
@@ -36,6 +36,7 @@ Resources:
       DomainValidationOptions:
         - ValidationDomain: !FindInMap [EnvironmentTypeMap, !Ref EnvironmentType, ValidationDomain]
           DomainName: !FindInMap [EnvironmentTypeMap, !Ref EnvironmentType, DomainName]
+      ValidationMethod: DNS
       Tags:
         - Key: Project
           Value: pixel.prx.org
