Reduce number of web servers

--- a/stacks/container-apps/root.yml
+++ b/stacks/container-apps/root.yml
@@ -379,6 +379,7 @@ Resources:
         ContainerCpu: !Ref ContainerCpu
         PlatformALBListenerPriorityPrefix: !Ref StyleguidePlatformALBListenerPriorityPrefix
         EcrImageTag: !Ref StyleguideEcrImageTag
+        DesiredWebs: "1"
         SecretsVersion: !Ref StyleguideSecretsVersion
         AppName: "styleguide"
         CreateWorker: "false"
