--- a/stacks/serverless/root.yml
+++ b/stacks/serverless/root.yml
@@ -281,6 +281,10 @@ Resources:
             !Sub "${InfrastructureStorageStackName}-InfrastructureApplicationCodeBucket"
         CodeS3ObjectVersion: !Ref PixelPrxOrgCodeS3ObjectVersion
         EnvironmentType: !Ref EnvironmentType
+        Destinations: !Sub "/prx/${EnvironmentTypeAbbreviation}/pixel.prx.org/DESTINATIONS"
+        KinesisStream: !Sub "/prx/${EnvironmentTypeAbbreviation}/pixel.prx.org/KINESIS_STREAM"
+        IdHost: !Sub "/prx/${EnvironmentTypeAbbreviation}/pixel.prx.org/ID_HOST"
+        SignerSecret: !Sub "/prx/${EnvironmentTypeAbbreviation}/pixel.prx.org/SIGNER_SECRET"
       Tags:
         - Key: "prx:cloudformation:stack-name"
           Value: !Ref AWS::StackName
