--- a/db/dovetail-redis.yml
+++ b/db/dovetail-redis.yml
@@ -1,11 +1,30 @@
 AWSTemplateFormatVersion: 2010-09-09
 Description: |
-  Testing
+  Creates a Redis replication group for Dovetail
 Parameters:
+  Environment:
+    Type: String
+    AllowedValues:
+      - Staging
+      - Production
+  ReplicationGroupId:
+    Type: String
+    Description: The replication group identifier
+    AllowedPattern: ^[a-z][a-z-]{0,18}[a-z]?$
+  NumNodeGroups:
+    Type: Number
+    Description: The number of shards in the replication group
+    AllowedValues:
+      - 1
+      - 2
+      - 3
+      - 4
   VPCStack:
     Description: VPC stack to add this cache into
     Type: String
     Default: VPCStack
+Conditions:
+  IsProduction: !Equals [!Ref Environment, Production]
 Resources:
   SecurityGroup:
     Type: AWS::EC2::SecurityGroup
@@ -16,7 +35,11 @@ Resources:
       GroupDescription: Dovetail Redis security group
       SecurityGroupIngress:
         - CidrIp: 0.0.0.0/0
-          IpProtocol: "tcp"
+          IpProtocol: tcp
+          FromPort: 6379
+          ToPort: 6379
+        - CidrIpv6: "::/0"
+          IpProtocol: tcp
           FromPort: 6379
           ToPort: 6379
   SubnetGroup:
@@ -34,28 +57,29 @@ Resources:
       AtRestEncryptionEnabled: false
       AutomaticFailoverEnabled: true
       AutoMinorVersionUpgrade: false
-      CacheNodeType: cache.r4.large
+      CacheNodeType: !If [IsProduction, cache.r4.large, cache.t2.micro]
       CacheParameterGroupName: default.redis5.0.cluster.on
       CacheSubnetGroupName: !Ref SubnetGroup
       Engine: redis
       EngineVersion: "5.0.3"
       # Node Groups are Shards
-      NumNodeGroups: 2
+      NumNodeGroups: !Ref NumNodeGroups
       Port: 6379
       PreferredMaintenanceWindow: sun:08:00-sun:09:00
       # Replicas are nodes. N replica will result in N+1 Nodes Per Shard
       ReplicasPerNodeGroup: 1
       ReplicationGroupDescription: >
         Dovetail Redis replication group
+      ReplicationGroupId: !Ref ReplicationGroupId
       SecurityGroupIds:
         - !GetAtt SecurityGroup.GroupId
       SnapshotRetentionLimit: 7
       SnapshotWindow: 07:00-08:00
       Tags:
-        # - Key: Project
-        #   Value: !Ref ProjectTag
-        # - Key: Environment
-        #   Value: !Ref EnvironmentType
+        - Key: Project
+          Value: Dovetail
+        - Key: Environment
+          Value: !Ref Environment
         - Key: "prx:cloudformation:stack-name"
           Value: !Ref AWS::StackName
         - Key: "prx:cloudformation:stack-id"
