Also prod; save some webs

--- a/stacks/container-apps/root.yml
+++ b/stacks/container-apps/root.yml
@@ -174,7 +174,6 @@ Resources:
       TimeoutInMinutes: 5
   AuguryStack:
     Type: "AWS::CloudFormation::Stack"
-    Condition: IsStaging
     Properties:
       NotificationARNs:
         - Fn::ImportValue:
@@ -209,6 +208,8 @@ Resources:
         CreateWorker: "true"
         ContainerPort: "3000"
         HealthCheckPath: "/health_check"
+        DesiredWebs: "1"
+        DesiredWebsProduction: "1"
       Tags:
         - Key: "prx:cloudformation:stack-name"
           Value: !Ref AWS::StackName
