Prod augury cname

--- a/dns/prx.org-hosted_zone.yml
+++ b/dns/prx.org-hosted_zone.yml
@@ -395,6 +395,11 @@ Resources:
           TTL: "300"
           Type: CNAME
           Name: !Sub metrics.${Domain}
+        - ResourceRecords:
+            - augury.prx.tech.
+          TTL: "300"
+          Type: CNAME
+          Name: !Sub augury.${Domain}
   PrxDotOrg:
     Type: "AWS::Route53::RecordSetGroup"
     Properties:
