--- a/stacks/dovetail-stitch-lambda.yml
+++ b/stacks/dovetail-stitch-lambda.yml
@@ -99,7 +99,7 @@ Resources:
       Handler: !FindInMap [EnvironmentTypeMap, !Ref EnvironmentType, Handler]
       MemorySize: 3008
       Role: !GetAtt DovetailStitchLambdaExecutionIAMRole.Arn
-      Runtime: nodejs8.10
+      Runtime: nodejs10.x
       Timeout: 30
       Tags:
         - Key: Project
