--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,6 +4,8 @@ env:
     PRX_NULL: "null"
 phases:
   install:
+    runtime-versions:
+      python: 3.7
     commands:
       - 'echo "Installing CloudFormation Linter"'
       - 'pip install awscli --upgrade && pip install cfn-lint --upgrade'
