--- a/buildspec.yml
+++ b/buildspec.yml
@@ -5,6 +5,7 @@ env:
 phases:
   install:
     commands:
+      - 'curl -s https://bootstrap.pypa.io/get-pip.py | python'
       - 'echo "Installing CloudFormation Linter"'
       - 'pip install awscli --upgrade && pip install cfn-lint --upgrade'
   build:
