--- a/buildspec.yml
+++ b/buildspec.yml
@@ -7,7 +7,7 @@ phases:
     commands:
       - 'curl -s https://bootstrap.pypa.io/get-pip.py | python'
       - 'echo "Installing CloudFormation Linter"'
-      - 'pip install awscli --upgrade && pip install cfn-lint --upgrade'
+      - 'pip install cfn-lint --upgrade'
   build:
     commands:
       - 'cd $(ls -d */|head -n 1)'
