Add in networks app

--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -40,6 +40,10 @@ Parameters:
     Type: String
   RemixSecretsVersion:
     Type: String
+  NetworksEcrImageTag:
+    Type: String
+  NetworksSecretsVersion:
+    Type: String
   MetricsEcrImageTag:
     Type: String
   MetricsSecretsVersion:
@@ -196,6 +200,8 @@ Mappings:
       prefix: 60
     Styleguide:
       prefix: 65
+    Networks:
+      prefix: 70
 Resources:
   # Root stacks
   StaticSitesRootStack:
@@ -341,6 +347,10 @@ Resources:
         RemixPlatformALBListenerPriorityPrefix: !FindInMap [ALBListenerRulePriorityMap, Remix, prefix]
         RemixEcrImageTag: !Ref RemixEcrImageTag
         RemixSecretsVersion: !Ref RemixSecretsVersion
+        # Networks
+        NetworksPlatformALBListenerPriorityPrefix: !FindInMap [ALBListenerRulePriorityMap, Networks, prefix]
+        NetworksEcrImageTag: !Ref NetworksEcrImageTag
+        NetworksSecretsVersion: !Ref NetworksSecretsVersion
       Tags:
         - Key: "prx:cloudformation:stack-name"
           Value: !Ref AWS::StackName
