Force sphinx service to use networks APP_NAME env var

--- a/stacks/container-apps/sphinx-nlb.yml
+++ b/stacks/container-apps/sphinx-nlb.yml
@@ -233,7 +233,7 @@ Resources:
         - Cpu: !Ref ContainerCpu
           Environment:
             - Name: APP_NAME
-              Value: !Ref AppName
+              Value: "networks"
             - Name: APP_ENV
               Value: !Ref EnvironmentTypeAbbreviation
             - Name: AWS_SECRETS_BASE
