Add tags to ECS services

--- a/stacks/castle.prx.org.yml
+++ b/stacks/castle.prx.org.yml
@@ -162,6 +162,15 @@ Resources:
           ContainerPort: 4000
           TargetGroupArn: !Ref CastleALBTargetGroup
       Role: !Ref ECSServiceIAMRole
+      Tags:
+        - Key: Project
+          Value: !FindInMap [Shared, Project, name]
+        - Key: Environment
+          Value: !Ref EnvironmentType
+        - Key: "prx:cloudformation:stack-name"
+          Value: !Ref AWS::StackName
+        - Key: "prx:cloudformation:stack-id"
+          Value: !Ref AWS::StackId
       TaskDefinition: !Ref CastleTaskDefinition
   CastleWebRecordSetGroup:
     Type: "AWS::Route53::RecordSetGroup"
