--- a/stacks/ecs.yml
+++ b/stacks/ecs.yml
@@ -149,6 +149,14 @@ Resources:
   # ECS Cluster and ASG
   ECSCluster:
     Type: "AWS::ECS::Cluster"
+    Properties:
+      Tags:
+        - Key: Project
+          Value: platform.prx.org
+        - Key: "prx:cloudformation:stack-name"
+          Value: !Ref AWS::StackName
+        - Key: "prx:cloudformation:stack-id"
+          Value: !Ref AWS::StackId
   ECSServiceIAMRole:
     Type: "AWS::IAM::Role"
     Properties:
