--- a/stacks/fourohfour.prx.org.yml
+++ b/stacks/fourohfour.prx.org.yml
@@ -69,4 +69,11 @@ Resources:
           ContainerPort: 4040
           TargetGroupArn: !Ref PlatformALBDefaultTargetGroupArn
       Role: !Ref ECSServiceIAMRole
+      Tags:
+        - Key: Project
+          Value: fourohfour.prx.org
+        - Key: "prx:cloudformation:stack-name"
+          Value: !Ref AWS::StackName
+        - Key: "prx:cloudformation:stack-id"
+          Value: !Ref AWS::StackId
       TaskDefinition: !Ref FourohfourTaskDefinition
