--- a/stacks/legacy-support/stripe-proxy.yml
+++ b/stacks/legacy-support/stripe-proxy.yml
@@ -171,6 +171,15 @@ Resources:
           ContainerPort: 80
           TargetGroupArn: !Ref StripeProxyALBTargetGroup
       Role: !Ref ECSServiceIAMRole
+      Tags:
+        - Key: Project
+          Value: stripe-proxy
+        - Key: Environment
+          Value: !Ref EnvironmentType
+        - Key: "prx:cloudformation:stack-name"
+          Value: !Ref AWS::StackName
+        - Key: "prx:cloudformation:stack-id"
+          Value: !Ref AWS::StackId
       TaskDefinition: !Ref StripeProxyWebTaskDefinition
   # Route 53
   StripeProxyWebRecordSetGroup:
