--- a/stacks/publish.prx.org.yml
+++ b/stacks/publish.prx.org.yml
@@ -157,6 +157,15 @@ Resources:
           ContainerPort: 4200
           TargetGroupArn: !Ref PublishALBTargetGroup
       Role: !Ref ECSServiceIAMRole
+      Tags:
+        - Key: Project
+          Value: !FindInMap [Shared, Project, name]
+        - Key: Environment
+          Value: !Ref EnvironmentType
+        - Key: "prx:cloudformation:stack-name"
+          Value: !Ref AWS::StackName
+        - Key: "prx:cloudformation:stack-id"
+          Value: !Ref AWS::StackId
       TaskDefinition: !Ref PublishTaskDefinition
   PublishWebRecordSetGroup:
     Type: "AWS::Route53::RecordSetGroup"
