--- a/stacks/container-apps/exchange-say-when.yml
+++ b/stacks/container-apps/exchange-say-when.yml
@@ -76,4 +76,13 @@ Resources:
         MaximumPercent: 200
         MinimumHealthyPercent: 50
       DesiredCount: 1
+      Tags:
+        - Key: Project
+          Value: !Ref AppName
+        - Key: Environment
+          Value: !Ref EnvironmentType
+        - Key: "prx:cloudformation:stack-name"
+          Value: !Ref AWS::StackName
+        - Key: "prx:cloudformation:stack-id"
+          Value: !Ref AWS::StackId
       TaskDefinition: !Ref SayWhenWorkerTaskDefinition
