--- a/stacks/container-apps/sphinx-nlb.yml
+++ b/stacks/container-apps/sphinx-nlb.yml
@@ -278,6 +278,15 @@ Resources:
           ContainerPort: !Ref ContainerPort
           TargetGroupArn: !Ref NLBTargetGroup
       Role: !Ref ECSServiceIAMRole
+      Tags:
+        - Key: Project
+          Value: !Ref AppName
+        - Key: Environment
+          Value: !Ref EnvironmentType
+        - Key: "prx:cloudformation:stack-name"
+          Value: !Ref AWS::StackName
+        - Key: "prx:cloudformation:stack-id"
+          Value: !Ref AWS::StackId
       TaskDefinition: !Ref WebTaskDefinition
   # Route 53
   WebRecordSetGroup:
