--- a/stacks/dovetail.prx.org.yml
+++ b/stacks/dovetail.prx.org.yml
@@ -299,6 +299,15 @@ Resources:
           Field: instanceId
       Role: !Ref ECSServiceIAMRole
       ServiceName: !Sub ${AWS::StackName}-DovetailApp
+      Tags:
+        - Key: Project
+          Value: Dovetail
+        - Key: Environment
+          Value: !Ref EnvironmentType
+        - Key: "prx:cloudformation:stack-name"
+          Value: !Ref AWS::StackName
+        - Key: "prx:cloudformation:stack-id"
+          Value: !Ref AWS::StackId
       TaskDefinition: !Ref DovetailTaskDefinition
   DovetailLogGroup:
     Type: "AWS::Logs::LogGroup"
