--- a/stacks/play.prx.org.yml
+++ b/stacks/play.prx.org.yml
@@ -159,6 +159,15 @@ Resources:
           ContainerPort: 4300
           TargetGroupArn: !Ref PlayALBTargetGroup
       Role: !Ref ECSServiceIAMRole
+      Tags:
+        - Key: Project
+          Value: !FindInMap [Shared, Project, name]
+        - Key: Environment
+          Value: !Ref EnvironmentType
+        - Key: "prx:cloudformation:stack-name"
+          Value: !Ref AWS::StackName
+        - Key: "prx:cloudformation:stack-id"
+          Value: !Ref AWS::StackId
       TaskDefinition: !Ref PlayTaskDefinition
   # Route 53
   PlayWebRecordSetGroup:
