Add tags to ECS task definitions

--- a/stacks/legacy-support/stripe-proxy.yml
+++ b/stacks/legacy-support/stripe-proxy.yml
@@ -156,6 +156,15 @@ Resources:
           PortMappings:
             - HostPort: 0
               ContainerPort: 80
+      Tags:
+        - Key: Project
+          Value: stripe-proxy
+        - Key: Environment
+          Value: !Ref EnvironmentType
+        - Key: "prx:cloudformation:stack-name"
+          Value: !Ref AWS::StackName
+        - Key: "prx:cloudformation:stack-id"
+          Value: !Ref AWS::StackId
   StripeProxyWebService:
     Type: "AWS::ECS::Service"
     Properties:
