--- a/stacks/castle.prx.org.yml
+++ b/stacks/castle.prx.org.yml
@@ -149,6 +149,15 @@ Resources:
           PortMappings:
             - HostPort: 0
               ContainerPort: 4000
+      Tags:
+        - Key: Project
+          Value: !FindInMap [Shared, Project, name]
+        - Key: Environment
+          Value: !Ref EnvironmentType
+        - Key: "prx:cloudformation:stack-name"
+          Value: !Ref AWS::StackName
+        - Key: "prx:cloudformation:stack-id"
+          Value: !Ref AWS::StackId
   CastleService:
     Type: "AWS::ECS::Service"
     Properties:
