--- a/stacks/container-apps/exchange-say-when.yml
+++ b/stacks/container-apps/exchange-say-when.yml
@@ -68,6 +68,15 @@ Resources:
           Name: !Sub ${AppName}-saywhen-worker
           Command:
             - worker
+      Tags:
+        - Key: Project
+          Value: !Ref AppName
+        - Key: Environment
+          Value: !Ref EnvironmentType
+        - Key: "prx:cloudformation:stack-name"
+          Value: !Ref AWS::StackName
+        - Key: "prx:cloudformation:stack-id"
+          Value: !Ref AWS::StackId
   SayWhenWorkerService:
     Type: "AWS::ECS::Service"
     Properties:
