--- a/stacks/container-apps/web-application.yml
+++ b/stacks/container-apps/web-application.yml
@@ -258,6 +258,15 @@ Resources:
               ContainerPort: !Ref ContainerPort
           Command:
             - web
+      Tags:
+        - Key: Project
+          Value: !Ref AppName
+        - Key: Environment
+          Value: !Ref EnvironmentType
+        - Key: "prx:cloudformation:stack-name"
+          Value: !Ref AWS::StackName
+        - Key: "prx:cloudformation:stack-id"
+          Value: !Ref AWS::StackId
   WebService:
     Type: "AWS::ECS::Service"
     Properties:
@@ -333,6 +342,15 @@ Resources:
           Name: !Sub ${AppName}-worker
           Command:
             - worker
+      Tags:
+        - Key: Project
+          Value: !Ref AppName
+        - Key: Environment
+          Value: !Ref EnvironmentType
+        - Key: "prx:cloudformation:stack-name"
+          Value: !Ref AWS::StackName
+        - Key: "prx:cloudformation:stack-id"
+          Value: !Ref AWS::StackId
   WorkerService:
     Condition: CreateWorkerResources
     Type: "AWS::ECS::Service"
