--- a/stacks/fourohfour.prx.org.yml
+++ b/stacks/fourohfour.prx.org.yml
@@ -56,6 +56,13 @@ Resources:
           PortMappings:
             - HostPort: 0
               ContainerPort: 4040
+      Tags:
+        - Key: Project
+          Value: fourohfour.prx.org
+        - Key: "prx:cloudformation:stack-name"
+          Value: !Ref AWS::StackName
+        - Key: "prx:cloudformation:stack-id"
+          Value: !Ref AWS::StackId
   FourohfourService:
     Type: "AWS::ECS::Service"
     Properties:
