--- a/stacks/play.prx.org.yml
+++ b/stacks/play.prx.org.yml
@@ -146,6 +146,15 @@ Resources:
           PortMappings:
             - HostPort: 0
               ContainerPort: 4300
+      Tags:
+        - Key: Project
+          Value: !FindInMap [Shared, Project, name]
+        - Key: Environment
+          Value: !Ref EnvironmentType
+        - Key: "prx:cloudformation:stack-name"
+          Value: !Ref AWS::StackName
+        - Key: "prx:cloudformation:stack-id"
+          Value: !Ref AWS::StackId
   PlayService:
     Type: "AWS::ECS::Service"
     Properties:
