--- a/stacks/publish.prx.org.yml
+++ b/stacks/publish.prx.org.yml
@@ -144,6 +144,15 @@ Resources:
           PortMappings:
             - HostPort: 0
               ContainerPort: 4200
+      Tags:
+        - Key: Project
+          Value: !FindInMap [Shared, Project, name]
+        - Key: Environment
+          Value: !Ref EnvironmentType
+        - Key: "prx:cloudformation:stack-name"
+          Value: !Ref AWS::StackName
+        - Key: "prx:cloudformation:stack-id"
+          Value: !Ref AWS::StackId
   PublishService:
     Type: "AWS::ECS::Service"
     Properties:
