--- a/stacks/web-alb-application.yml
+++ b/stacks/web-alb-application.yml
@@ -288,6 +288,15 @@ Resources:
               ContainerPort: !Ref ContainerPort
           Command:
             - web
+      Tags:
+        - Key: Project
+          Value: !Ref AppName
+        - Key: Environment
+          Value: !Ref EnvironmentType
+        - Key: "prx:cloudformation:stack-name"
+          Value: !Ref AWS::StackName
+        - Key: "prx:cloudformation:stack-id"
+          Value: !Ref AWS::StackId
   WebService:
     Type: "AWS::ECS::Service"
     DependsOn:
@@ -361,6 +370,15 @@ Resources:
           Name: !Sub ${AppName}-worker
           Command:
             - worker
+      Tags:
+        - Key: Project
+          Value: !Ref AppName
+        - Key: Environment
+          Value: !Ref EnvironmentType
+        - Key: "prx:cloudformation:stack-name"
+          Value: !Ref AWS::StackName
+        - Key: "prx:cloudformation:stack-id"
+          Value: !Ref AWS::StackId
   WorkerService:
     Condition: CreateWorkerResources
     Type: "AWS::ECS::Service"
