Try to get \NLB to listen to both service ports, 3000 and 9312

--- a/stacks/container-apps/sphinx-nlb.yml
+++ b/stacks/container-apps/sphinx-nlb.yml
@@ -132,6 +132,7 @@ Resources:
       TargetGroupAttributes:
         - Key: deregistration_delay.timeout_seconds
           Value: "30"
+      TargetType: ip
       Tags:
         - Key: Project
           Value: !Ref AppName
@@ -255,12 +256,11 @@ Resources:
           MemoryReservation: !If [HasMemoryReservation, !Ref ContainerMemoryReservation, !Ref "AWS::NoValue"]
           Name: !Sub ${AppName}-web
           PortMappings:
-            - HostPort: 0
-              ContainerPort: !Ref ContainerPort
-            - HostPort: 0
-              ContainerPort: 9312
+            - ContainerPort: !Ref ContainerPort
+            - ContainerPort: 9312
           Command:
             - web
+      NetworkMode: awsvpc
   WebService:
     Type: "AWS::ECS::Service"
     DependsOn:
