Add missing NetworkConfiguration

--- a/stacks/container-apps/sphinx-nlb.yml
+++ b/stacks/container-apps/sphinx-nlb.yml
@@ -277,6 +277,13 @@ Resources:
         - ContainerName: !Sub ${AppName}-web
           ContainerPort: !Ref ContainerPort
           TargetGroupArn: !Ref NLBTargetGroup
+      NetworkConfiguration:
+        AwsvpcConfiguration:
+          AssignPublicIp: DISABLED
+          Subnets:
+            - !Ref VPCSubnet1
+            - !Ref VPCSubnet2
+            - !Ref VPCSubnet3
       Role: !Ref ECSServiceIAMRole
       TaskDefinition: !Ref WebTaskDefinition
   # Route 53
