Add location support to Eventbrite notifications

--- a/etc/eventbrite-webhooks.yml
+++ b/etc/eventbrite-webhooks.yml
@@ -129,7 +129,7 @@ Resources:
           }
 
           async function getEvent(order) {
-              const reqUrl = `${order.event.resource_uri}?${TOKEN}&expand=ticket_classes`;
+              const reqUrl = `${order.event.resource_uri}?${TOKEN}&expand=ticket_classes,venue`;
               const event = await httpGet(reqUrl);
               return event;
           }
@@ -178,7 +178,7 @@ Resources:
                   username: SLACK_USERNAME,
                   icon_emoji: SLACK_ICON,
                   text: [
-                      `<mailto:${order.email}|${order.name}> ordered <${orderUrl}|${tickets}> for <${event.url}|${event.name.text}> (<${adminUrl}|Manage>)`,
+                      `<mailto:${order.email}|${order.name}> ordered <${orderUrl}|${tickets}> for <${event.url}|${event.name.text}> @ ${event.venue.address.city}, ${event.venue.address.region} (<${adminUrl}|Manage>)`,
                       `> ${total_sold} tickets ordered – ${remaining} remaining`
                   ].join('\n')
               };
